# gaussian-splatting

./: .gitignore  AGENTS.md  README.md  README_KR.md  SIBR_VIEWER_CODE_REVIEW.md  activate.sh  convert.py  extract_video_frames.py  pyproject.toml  quickstart.sh  render_interpolated.py  render_video.py  requirements-web.txt  train.py
arguments/: __init__.py
colab/: Gaussian_Splatting_Colab.ipynb  README.md  __init__.py  colab_utils.py  requirements-colab.txt  setup_colab.sh
plan/: webui-training-monitor.md
scene/: __init__.py  dataset_readers.py
tests/: test_webui_app.py  test_webui_commands.py  test_webui_config.py  test_webui_data_browser.py  test_webui_jobs.py  test_webui_progress.py  test_webui_security.py
tools/: build_complete_passage.py  copy_registered_images_for_colmap.py  merge_passage_backbone.py  merge_rooms_with_best_passage.py  merge_rooms_with_reference.py  normalize_colmap_image_ids.py  package_colmap_bundles_for_colab.py  package_split_colmap_for_colab.py  split_frames_from_subtxt.py  undistort_and_package_colmap.py  undistort_colmap_scenes.py
webui/: README.md  __init__.py  app.py  commands.py  config.py  data_browser.py  jobs.py  prepare_data.py  progress.py  security.py
