[project]
name = "gaussian-splatting-webui"
version = "0.1.0"
description = "Local and Tailscale web UI for 3D Gaussian Splatting workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
